--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "byline": "^4.2.2",
-    "classnames": "https://registry.npmjs.org/classnames/-/classnames-2.2.5.tgz",
+    "classnames": "^2.2.5",
     "codemirror": "^5.19.0",
     "dexie": "^1.4.1",
     "electron-window-state": "^3.1.0",
