--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "npm": ">= 3"
   },
   "dependencies": {
+    "@niik/tslint-microsoft-contrib": "^2.0.14",
     "aws-sdk": "^2.3.15",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
@@ -54,6 +55,7 @@
     "ts-loader": "^0.8.2",
     "ts-node": "^1.3.0",
     "tslint": "^3.14.0",
+    "tslint-microsoft-contrib": "^2.0.13",
     "typescript": "^2.0.6",
     "vrsource-tslint-rules": "^0.12.0",
     "webpack": "^1.12.15",
