--- a/app/.npmrc
+++ b/app/.npmrc
@@ -1,4 +1,4 @@
 runtime = electron
-disturl = https://atom.io/download/atom-shell
+disturl = https://atom.io/download/electron
 target = 1.4.2
 arch = x64
