Replace our home-grown guid function with node-uuid
This uses cryptographically secure random numbers which satisfies the no-insecure-random tslint rule

--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "got": "^6.5.0",
     "keytar": "^3.0.2",
     "moment": "^2.14.1",
+    "node-uuid": "^1.4.7",
     "octokat": "^0.5.0-beta.0",
     "react": "^15.3.2",
     "react-addons-css-transition-group": "^15.3.2",
