--- a/app/package.json
+++ b/app/package.json
@@ -21,8 +21,10 @@
     "event-kit": "^2.0.0",
     "git-kitchen-sink": "^1.12.0",
     "got": "^6.5.0",
+    "iconv": "^2.2.1",
     "keytar": "^3.0.2",
     "moment": "^2.14.1",
+    "node-icu-charset-detector": "^0.2.0",
     "node-uuid": "^1.4.7",
     "octokat": "^0.5.0-beta.0",
     "react": "^15.3.2",
