Add rebuild-the-world commands

--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "rebuild:dev": "npm run clean && npm run build:dev",
     "rebuild:prod": "npm run clean && npm run build:prod",
     "lint": "tslint \"./app/src/**/*.ts\" \"./app/src/**/*.tsx\" \"./app/test/**/*.ts\" \"./app/test/**/*.tsx\"",
-    "publish": "node script/publish"
+    "publish": "node script/publish",
+    "clean-slate": "rimraf node_modules app/node_modules && npm run clean && npm install",
+    "rebuild-hard:dev": "npm run clean-slate && npm rebuild:dev",
+    "rebuild-hard:prod": "npm run clean-slate && npm rebuild:prod"
   },
   "author": "",
   "license": "MIT",
