--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "lint": "tslint \"./app/src/**/*.ts\" \"./app/src/**/*.tsx\" \"./app/test/**/*.ts\" \"./app/test/**/*.tsx\"",
     "publish": "node script/publish",
     "clean-slate": "npm run clean && rimraf node_modules app/node_modules && npm install",
-    "rebuild-hard:dev": "npm run clean-slate && npm rebuild:dev",
-    "rebuild-hard:prod": "npm run clean-slate && npm rebuild:prod"
+    "rebuild-hard:dev": "npm run clean-slate && npm run rebuild:dev",
+    "rebuild-hard:prod": "npm run clean-slate && npm run rebuild:prod"
   },
   "author": "",
   "license": "MIT",
