--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "chai-datetime": "^1.4.1",
     "cross-env": "^1.0.8",
     "css-loader": "^0.23.1",
-    "electron": "1.4.7",
+    "electron": "https://github.com/electron-userland/electron-prebuilt#33435e1e40c19143bdb828118105cd004b371b06",
     "electron-mocha": "3.0.5",
     "electron-packager": "8.1.0",
     "electron-winstaller": "^2.3.0",
@@ -73,7 +73,6 @@
     "@types/chai-datetime": "0.0.30",
     "@types/classnames": "0.0.31",
     "@types/codemirror": "0.0.33",
-    "@types/electron": "^1.3.15",
     "@types/electron-window-state": "^2.0.27",
     "@types/event-kit": "^1.2.28",
     "@types/keytar": "^3.0.28",
