install iconv-lite dependency

--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "electron-window-state": "^3.1.0",
     "event-kit": "^2.0.0",
     "git-kitchen-sink": "^1.12.0",
+    "iconv-lite": "^0.4.15",
     "keytar": "^3.0.2",
     "moment": "^2.14.1",
     "node-uuid": "^1.4.7",
