--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "electron-winstaller": "^2.3.0",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
-    "fs-extra": "^0.30.0",
+    "fs-extra": "^1.0.0",
     "got": "^6.3.0",
     "html-webpack-plugin": "^2.21.0",
     "mocha": "^3.0.2",
@@ -76,6 +76,7 @@
     "@types/electron": "^1.3.15",
     "@types/electron-window-state": "^2.0.27",
     "@types/event-kit": "^1.2.28",
+    "@types/fs-extra": "0.0.35",
     "@types/keytar": "^3.0.28",
     "@types/mocha": "^2.2.29",
     "@types/node": "^6.0.31",
