Bring in choosealicense

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "app/static/common/gitignore"]
 	path = app/static/common/gitignore
 	url = https://github.com/github/gitignore.git
+[submodule "app/static/common/choosealicense.com"]
+	path = app/static/common/choosealicense.com
+	url = https://github.com/github/choosealicense.com.git
