--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "dexie": "^1.4.1",
     "electron-window-state": "^3.1.0",
     "event-kit": "^2.0.0",
+    "front-matter": "^2.1.1",
     "git-kitchen-sink": "^1.12.0",
     "got": "^6.5.0",
     "keytar": "^3.0.2",
