--- a/app/package.json
+++ b/app/package.json
@@ -24,7 +24,6 @@
     "iconv-lite": "^0.4.15",
     "keytar": "^3.0.2",
     "moment": "^2.14.1",
-    "node-uuid": "^1.4.7",
     "octokat": "^0.5.0-beta.0",
     "react": "^15.3.2",
     "react-addons-css-transition-group": "^15.3.2",
@@ -33,7 +32,8 @@
     "react-virtualized": "^8.8.1",
     "textarea-caret": "^3.0.1",
     "untildify": "^3.0.2",
-    "username": "^2.2.2"
+    "username": "^2.2.2",
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
     "fs-extra": "^1.0.0",
